@@ -1,3 +1,7 @@
+1999-09-22  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Frame/JCMT.pm (findrecipe): Support phot-pixel jiggle maps
+
 1999-09-20  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/Michelle.pm: Add initialisation of format and rawformat.
